more direct retrieval of stack
